💄 Fix overlap between work-in-progress and work title on _work/ (Closes #42)

--- a/src/style.styl
+++ b/src/style.styl
@@ -402,7 +402,8 @@ body
 .work-in-progress
 	text-align center
 	margin-top 1.5rem
-	margin-bottom -1 * @margin-top
+	@media (min-width 1000px)
+		margin-bottom -1 * @margin-top
 	z-index 10
 	weight-link()
 	&::before
